LU-8370 updates: size round for update record.

Using cfs_size_round to get the new update record
size.

And also adding some debug message.

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I4d75a942817224e3dadfc0ad78f718cfc4fad3a7